<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">true</string>
    <string name="false_button">false</string>
    <string name="cunning_button">커닝</string>
    <string name="before_button">이전</string>
    <string name="next_button">다음</string>
    <string name="correct_toast">정답</string>
    <string name="error_toast">틀림</string>
    <string name="warning_text">정말로 답을 보겠습니까?</string>
    <string name="answer_button">정답보기</string>
    <string name="cunning_toast">커닝은 나빠요!</string>
    <string name="quiz_one">태평양은 대서양보다 더 크다.</string>
    <string name="quiz_two">수에즈 운하는 흥해와 인도양을 연결한다.</string>
    <string name="quiz_three">나일강은 이집트에서 시작된다.</string>
    <string name="quiz_fore">아마존강은 아메리카 대륙에서 가장 긴 강이다.</string>
    <string name="quiz_five">바이칼 호수는 세계에서 가장 오래되고 가장 깊은 담수호이다.</string>
</resources>
